fix: dark mode for github icon

--- a/src/typography.pcss
+++ b/src/typography.pcss
@@ -3,7 +3,7 @@ h1 {
 }
 
 h2 {
-	@apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors mt-2 first:mt-0;
+	@apply scroll-m-20 pb-2 text-3xl font-semibold tracking-tight transition-colors mt-2 first:mt-0;
 }
 
 h3 {
